feat: swap dns mode

--- a/kubernetes/apps/base/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/app/helm/values.yaml
@@ -5,7 +5,6 @@ bandwidthManager:
   bbr: true
 bpf:
   datapathMode: netkit
-  hostLegacyRouting: true
   masquerade: true
   preallocateMaps: true
   # tproxy: true
@@ -23,6 +22,7 @@ cni:
 dashboards:
   enabled: true
 devices: en+
+enableIPv4BIGTCP: true
 endpointRoutes:
   enabled: true
 envoy:
