--- a/talos/main/patches/controller/machine-features.yaml
+++ b/talos/main/patches/controller/machine-features.yaml
@@ -2,8 +2,8 @@ machine:
   features:
     hostDNS:
       enabled: true
-      forwardKubeDNSToHost: true
       resolveMemberNames: true
+      forwardKubeDNSToHost: false
     kubernetesTalosAPIAccess:
       enabled: true
       allowedRoles:
