--- a/kubernetes/apps/base/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/app/helm/values.yaml
@@ -22,7 +22,7 @@ cni:
 dashboards:
   enabled: true
 devices: en+
-enableIPv4BIGTCP: true
+# enableIPv4BIGTCP: true
 endpointRoutes:
   enabled: true
 envoy:
