feat: update kyoo httproute

--- a/kubernetes/apps/base/media/kyoo/httproute.yaml
+++ b/kubernetes/apps/base/media/kyoo/httproute.yaml
@@ -12,6 +12,6 @@ spec:
       sectionName: https
   rules:
     - backendRefs:
-        - name: kyoo-back
+        - name: kyoo-front
           namespace: media
           port: 8901
