fix: acars route

--- a/kubernetes/apps/base/self-hosted/acars/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/acars/helmrelease.yaml
@@ -180,7 +180,7 @@ spec:
           vdsloutput:
             port: 15555
     route:
-      app:
+      acarshub:
         hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
         parentRefs:
           - name: external
@@ -188,8 +188,8 @@ spec:
             sectionName: https
         rules:
           - backendRefs:
-              - name: *app
-                port: *port
+              - name: acarshub
+                port: 80
     persistence:
       # usb:
       #   type: hostPath
