--- a/kubernetes/apps/base/observability/grafana/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/grafana/helmrelease.yaml
@@ -381,7 +381,7 @@ spec:
         enabled: true
         hostnames: ["${GATUS_SUBDOMAIN}.${SECRET_DOMAIN}"]
         parentRefs:
-          - name: internal
+          - name: external
             namespace: kube-system
             sectionName: https
     persistence:
