--- a/kubernetes/apps/base/self-hosted/thelounge/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/thelounge/helmrelease.yaml
@@ -58,7 +58,7 @@ spec:
             port: &port 9000
     route:
       app:
-        hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
+        hostnames: ["${GATUS_SUBDOMAIN}.${SECRET_DOMAIN}"]
         parentRefs:
           - name: external
             namespace: kube-system
