--- a/kubernetes/apps/base/security/authentik/httproute.yaml
+++ b/kubernetes/apps/base/security/authentik/httproute.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   hostnames: ["sso.${SECRET_DOMAIN}"]
   parentRefs:
-    - name: internal
+    - name: external
       namespace: kube-system
       sectionName: https
   rules:
