chore: add kustomizeconfig for suc versions

--- a/kubernetes/apps/main/kube-tools/kustomization.yaml
+++ b/kubernetes/apps/main/kube-tools/kustomization.yaml
@@ -16,7 +16,7 @@ resources:
   - ./spegel/ks.yaml
   - ./system-upgrade-controller/ks.yaml
 configMapGenerator:
-  - name: system-upgrade-plan-versions
+  - name: versions
     env: ../../base/kube-tools/system-upgrade-controller/versions.env
-generatorOptions:
-  disableNameSuffixHash: true
+configurations:
+  - ../../base/kube-tools/system-upgrade-controller/kustomizeconfig.yaml
