--- a/kubernetes/apps/main/kube-tools/system-upgrade-controller/ks.yaml
+++ b/kubernetes/apps/main/kube-tools/system-upgrade-controller/ks.yaml
@@ -42,7 +42,7 @@ spec:
   postBuild:
     substituteFrom:
       - kind: ConfigMap
-        name: system-upgrade-plan-versions
+        name: versions
   prune: true
   retryInterval: 2m
   sourceRef:
