--- a/kubernetes/apps/test/kube-tools/kustomization.yaml
+++ b/kubernetes/apps/test/kube-tools/kustomization.yaml
@@ -11,7 +11,7 @@ resources:
   - ./reloader/ks.yaml
   - ./system-upgrade-controller/ks.yaml
 configMapGenerator:
-  - name: system-upgrade-plan-versions
+  - name: versions
     env: ../../base/kube-tools/system-upgrade-controller/versions.env
-generatorOptions:
-  disableNameSuffixHash: true
+configurations:
+  - ../../base/kube-tools/system-upgrade-controller/kustomizeconfig.yaml
