chore: update target

--- a/kubernetes/apps/base/self-hosted/archiveteam/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/archiveteam/helmrelease.yaml
@@ -37,7 +37,7 @@ spec:
                 memory: 500Mi
             env:
               DOWNLOADER: LilDrunkenSmurf
-              SELECTED_PROJECT: usgovernment
+              SELECTED_PROJECT: auto
               CONCURRENT_ITEMS: 6
     defaultPodOptions:
       securityContext:
