--- a/kubernetes/apps/base/storage/snapshot-controller/helmrelease.yaml
+++ b/kubernetes/apps/base/storage/snapshot-controller/helmrelease.yaml
@@ -1,13 +1,19 @@
 ---
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
-  name: piraeus
-  namespace: storage # Required for Renovate lookups
+  name: snapshot-controller
 spec:
   interval: 1h
-  url: https://piraeus.io/helm-charts/
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 4.0.1
+  url: oci://ghcr.io/onedr0p/charts-mirror/snapshot-controller
+  verify:
+    provider: cosign
 ---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -16,14 +22,9 @@ metadata:
   name: snapshot-controller
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: snapshot-controller
-      version: 4.0.1
-      sourceRef:
-        kind: HelmRepository
-        name: piraeus
-        namespace: storage
+  chartRef:
+    kind: OCIRepository
+    name: snapshot-controller
   maxHistory: 2
   install:
     crds: CreateReplace
