--- a/kubernetes/apps/base/observability/silence-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/silence-operator/app/helmrelease.yaml
@@ -1,13 +1,20 @@
 ---
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
-  name: wiremind
-  namespace: observability # Required for Renovate lookups
+  name: silence-operator
 spec:
   interval: 1h
-  url: https://wiremind.github.io/wiremind-helm-charts/
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 0.0.7
+  url: oci://ghcr.io/onedr0p/charts-mirror/silence-operator
+  verify:
+    provider: cosign
+
 ---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -16,14 +23,9 @@ metadata:
   name: silence-operator
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: silence-operator
-      version: 0.0.7
-      sourceRef:
-        kind: HelmRepository
-        name: wiremind
-        namespace: observability
+  chartRef:
+    kind: OCIRepository
+    name: silence-operator
   install:
     remediation:
       retries: 3
