--- a/kubernetes/apps/base/observability/silence-operator/crds/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/silence-operator/crds/helmrelease.yaml
@@ -1,4 +1,21 @@
 ---
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
+metadata:
+  name: silence-operator-crds
+
+spec:
+  interval: 1h
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 0.0.2
+  url: oci://ghcr.io/onedr0p/charts-mirror/silence-operator-crds
+  verify:
+    provider: cosign
+---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -6,14 +23,9 @@ metadata:
   name: silence-operator-crds
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: silence-operator-crds
-      version: 0.0.2
-      sourceRef:
-        kind: HelmRepository
-        name: wiremind
-        namespace: observability
+  chartRef:
+    kind: OCIRepository
+    name: silence-operator-crds
   install:
     remediation:
       retries: 3
