--- a/kubernetes/apps/base/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/base/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -1,3 +1,20 @@
+
+---
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
+metadata:
+  name: rook-ceph-cluster
+spec:
+  interval: 1h
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: v1.16.5
+  url: oci://ghcr.io/onedr0p/charts-mirror/rook-ceph-cluster
+  verify:
+    provider: cosign
 ---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -9,14 +26,9 @@ spec:
   #   mode: enabled
   interval: 1h
   timeout: 15m
-  chart:
-    spec:
-      chart: rook-ceph-cluster
-      version: v1.16.5
-      sourceRef:
-        kind: HelmRepository
-        name: rook-ceph
-        namespace: rook-ceph
+  chartRef:
+    kind: OCIRepository
+    name: rook-ceph-cluster
   install:
     remediation:
       retries: 3
