--- a/kubernetes/apps/base/flux-system/headlamp/helmrelease.yaml
+++ b/kubernetes/apps/base/flux-system/headlamp/helmrelease.yaml
@@ -1,13 +1,19 @@
 ---
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
   name: headlamp
-  namespace: flux-system # Required for Renovate lookups
 spec:
   interval: 1h
-  url: https://headlamp-k8s.github.io/headlamp/
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 0.29.1
+  url: oci://ghcr.io/onedr0p/charts-mirror/headlamp
+  verify:
+    provider: cosign
 ---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -16,14 +22,9 @@ metadata:
   name: &app headlamp
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: headlamp
-      version: 0.29.1
-      sourceRef:
-        kind: HelmRepository
-        name: headlamp
-        namespace: flux-system
+  chartRef:
+    kind: OCIRepository
+    name: headlamp
   install:
     remediation:
       retries: 3
