--- a/kubernetes/apps/base/kube-tools/node-feature-discovery/helmrelease.yaml
+++ b/kubernetes/apps/base/kube-tools/node-feature-discovery/helmrelease.yaml
@@ -1,13 +1,19 @@
 ---
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
   name: node-feature-discovery
-  namespace: kube-tools # Required for Renovate lookups
 spec:
   interval: 1h
-  url: https://kubernetes-sigs.github.io/node-feature-discovery/charts
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 0.17.2
+  url: oci://ghcr.io/onedr0p/charts-mirror/node-feature-discovery
+  verify:
+    provider: cosign
 ---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -16,14 +22,9 @@ metadata:
   name: node-feature-discovery
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: node-feature-discovery
-      version: 0.17.2
-      sourceRef:
-        kind: HelmRepository
-        name: node-feature-discovery
-        namespace: kube-tools
+  chartRef:
+    kind: OCIRepository
+    name: node-feature-discovery
   install:
     crds: CreateReplace
     remediation:
