--- a/kubernetes/apps/main/games/kustomization.yaml
+++ b/kubernetes/apps/main/games/kustomization.yaml
@@ -5,8 +5,8 @@ namespace: games
 components:
   - ../../../components/clusters/main
   - ../../../components/common
-resources: []
+resources: 
   # - ./core-keeper/ks.yaml
-  # - ./minecraft/ks.yaml
+  - ./minecraft/ks.yaml
   # - ./palworld/ks.yaml
   # - ./vrising/ks.yaml
