feat: ditch the port

--- a/kubernetes/components/clusters/main/cluster-secrets.sops.yaml
+++ b/kubernetes/components/clusters/main/cluster-secrets.sops.yaml
@@ -6,6 +6,7 @@ stringData:
     #ENC[AES256_GCM,data:4fDPDBjGJd+bDq6XWw==,iv:aCQGLarnqqB8Kn/oNB7N51s2sMVKvlRTmam5cXFBDys=,tag:QyhWt48zxgH8fJmikPMQmg==,type:comment]
     R2_ENDPOINT: ENC[AES256_GCM,data:QnBxEpAsHkELj6JVYZJblKTY9zqWXrlvFjy8M6B2bqgqQYw4Ti6ng7JnvVwwNDrMxwxBj1n86ZuD,iv:un2cmTNtnaYZg28ZY2jyfbAsxY8TPfgfTy6GIbJd8l8=,tag:+6e0RhsEXP50hiZjjt2wLA==,type:str]
     SVC_KUBE_API: ENC[AES256_GCM,data:F2TTt6O0Z1LT3Q==,iv:n9TbBm2pvSdqu+QvuiYhYIi4TQVfGeqiTzbaSFLzu+w=,tag:bcp+n1q0AFiaRevb1HAqPg==,type:str]
+    SVC_GATEWAY_TCP: ENC[AES256_GCM,data:wgenblCGq/5vLA==,iv:x9nzMvMImUwkofWdVTb+xCmXxASumYUlrpR7d5rVBLs=,tag:LFxdt+Q2zaOsEb0sBxlltQ==,type:str]
     SVC_GATEWAY_INTERNAL: ENC[AES256_GCM,data:jSC3LRXwpxXbxQ==,iv:n33PKD124e3+Y3Pq0DtVVFGfvMVBFb+b3zrksiaiJb8=,tag:Fhmnc26vljuIrnuhkHQ17A==,type:str]
     SVC_GATEWAY_EXTERNAL: ENC[AES256_GCM,data:TqphSeHvkTcV1Q==,iv:iglHVKisqoqaS6BHqTCxkXY7rfvsLoQjwmezdEREQJk=,tag:ULiumSMJtznN+KlKE3f5gg==,type:str]
     SVC_ABIOTIC_ADDR: ENC[AES256_GCM,data:vwvzpurDqzJaXw==,iv:/Ua885qZHEwwFvGBYsuVIknav8bJLkMriXH2ngtc18Y=,tag:XdmXKw5LSXAXmcxBTz7KYA==,type:str]
@@ -35,8 +36,8 @@ sops:
             Mml3TDJwa2tWTUV3d0piVTFJSFhhOEEKr0FLybpRsnIlbT55No+/qolp2GVAB1yD
             yeGYjULaarqScUazhWSnuzDcRj4X0MX8UDV5lc4OsGba9ymVbywDbQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-12T22:03:13Z"
-    mac: ENC[AES256_GCM,data:CeZ/VcINs9xv3ZSB6m64pESLOFdkhkSPX5bQZPUHJwdt+I0ckpkIFVCoyDtYTqTANuFbbmXScD3hEMudci4/5l96uu2Nhk5mb/no7idhALGjbOSYJyLJUJleyDzBKv8gQ+gydiRftQmE0j96prAkdlLlWsRioWKLYyNowbcEqF8=,iv:Z7vlEJfif3QJEdDxQNuO56WxAseyG9SC7Ga1iVNsssc=,tag:nnibUGA1PQ7kdnVR1yA9vw==,type:str]
+    lastmodified: "2025-03-14T21:22:11Z"
+    mac: ENC[AES256_GCM,data:Skpm+JDJ8VZf+m5MWmcr1j8OmbAVVGmJfrvcZ+S0jLL8SjqrlJS0QA4MG8v0vslpGHxVne6vgk7iLYOiWG3BBJhIzzRqpgUmbY9uaeqtiGqO2lQRmLK9Dcl5uI60GIgMdkBoYvPh8dHWp5uq68U/HMAgyfpdFqRMRlQzhZmpUgw=,iv:+2W1DksY6cEIoKsSeSXwcLKrhK3MWCGYmzeoizNJRe4=,tag:jqYIBiXxN5YcbSd/jlaoyQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.4
