--- a/kubernetes/apps/base/games/minecraft/mc-router/helmrelease.yaml
+++ b/kubernetes/apps/base/games/minecraft/mc-router/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
   values:
     services:
       minecraft:
-        # type: LoadBalancer
+        type: LoadBalancer
         annotations:
-          # lbipam.cilium.io/ips: ${SVC_MINECRAFT_ADDR}, ::ffff:${SVC_MINECRAFT_ADDR}
+          lbipam.cilium.io/ips: ${SVC_MINECRAFT_ADDR}, ::ffff:${SVC_MINECRAFT_ADDR}
           external-dns.alpha.kubernetes.io/hostname: mc.${SECRET_DOMAIN}
