feat: update minecraft to new chart, and add fullnameoverride

--- a/kubernetes/apps/base/games/minecraft/takocraft/helmrelease.yaml
+++ b/kubernetes/apps/base/games/minecraft/takocraft/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
     spec:
       # renovate: registryUrl=https://itzg.github.io/minecraft-server-charts/
       chart: minecraft
-      version: 4.24.0
+      version: 4.25.0
       sourceRef:
         kind: HelmRepository
         name: itzg-charts
@@ -23,11 +23,10 @@ spec:
       strategy: rollback
       retries: 3
   values:
-    # deploymentAnnotations:
-    #   secret.reloader.stakater.com/reload: minecraft-takocraft-secret
+    fullnameOverride: *app
     image:
       repository: ghcr.io/itzg/minecraft-server
-      tag: stable@sha256:17096d38598b4f856467eba656077c8f8b0dfb282582c9aa6b3e77802ba1a209
+      tag: 2025.3.0@sha256:17096d38598b4f856467eba656077c8f8b0dfb282582c9aa6b3e77802ba1a209
     resources:
       requests:
         cpu: 500m
