feat: update all actions

--- a/.github/workflows/nas-restart.yaml
+++ b/.github/workflows/nas-restart.yaml
@@ -28,7 +28,7 @@
             KUBECONFIG: op://Kubernetes/kubernetes/KUBECONFIG_BASE64
 
         - name: Checkout
-          uses: actions/checkout@v4
+          uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
 
         - name: Setup Homebrew
           uses: Homebrew/actions/setup-homebrew@master
