--- a/kubernetes/apps/base/games/minecraft/mc-router/helmrelease.yaml
+++ b/kubernetes/apps/base/games/minecraft/mc-router/helmrelease.yaml
@@ -1,13 +1,19 @@
 ---
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
-  name: itzg-charts
-  namespace: games # Required for Renovate lookups
+  name: mc-router
 spec:
-  interval: 2h
-  url: https://itzg.github.io/minecraft-server-charts/
+  interval: 1h
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 1.2.4
+  url: oci://ghcr.io/onedr0p/charts-mirror/mc-router
+  verify:
+    provider: cosign
 ---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -16,14 +22,9 @@ metadata:
   name: mc-router
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: mc-router
-      version: 1.2.4
-      sourceRef:
-        kind: HelmRepository
-        name: itzg-charts
-        namespace: games
+  chartRef:
+    kind: OCIRepository
+    name: mc-router
   install:
     remediation:
       retries: 3
