--- a/kubernetes/apps/base/games/minecraft/vibecraft/helmrelease.yaml
+++ b/kubernetes/apps/base/games/minecraft/vibecraft/helmrelease.yaml
@@ -1,3 +1,20 @@
+---
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
+metadata:
+  name: minecraft
+spec:
+  interval: 1h
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 4.25.0
+  url: oci://ghcr.io/onedr0p/charts-mirror/minecraft
+  verify:
+    provider: cosign
+---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -5,15 +22,9 @@ metadata:
   name: &app minecraft-vibecraft
 spec:
   interval: 1h
-  chart:
-    spec:
-      # renovate: registryUrl=https://itzg.github.io/minecraft-server-charts/
-      chart: minecraft
-      version: 4.25.0
-      sourceRef:
-        kind: HelmRepository
-        name: itzg-charts
-        namespace: games
+  chartRef:
+    kind: OCIRepository
+    name: minecraft
   install:
     remediation:
       retries: 3
