fix: missing anchor

--- a/kubernetes/apps/base/media/plex/movie-roulette/helmrelease.yaml
+++ b/kubernetes/apps/base/media/plex/movie-roulette/helmrelease.yaml
@@ -57,7 +57,7 @@ spec:
         controller: *app
         ports:
           http:
-            port: 4000
+            port: &port 4000
     route:
       app:
         hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
