chore: cleanup OCIrepo

--- a/kubernetes/apps/base/games/minecraft/takocraft/helmrelease.yaml
+++ b/kubernetes/apps/base/games/minecraft/takocraft/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: OCIRepository
 metadata:
-  name: minecraft
+  name: minecraft-takocraft
 spec:
   interval: 1h
   layerSelector:
@@ -32,7 +32,7 @@ spec:
   interval: 1h
   chartRef:
     kind: OCIRepository
-    name: minecraft
+    name: minecraft-takocraft
   # chart:
   #   spec:
   #     # renovate: registryUrl=https://itzg.github.io/minecraft-server-charts/
