--- a/kubernetes/apps/base/network/cloudflare-dns/helmrelease.yaml
+++ b/kubernetes/apps/base/network/cloudflare-dns/helmrelease.yaml
@@ -35,9 +35,9 @@ spec:
       retries: 3
   values:
     fullnameOverride: *app
-    image: # TODO: https://github.com/kubernetes-sigs/external-dns/pull/4943
-      repository: ghcr.io/buroa/external-dns
-      tag: 631b84da
+    image: # TODO: Remove this block when new chart version is released
+      repository: registry.k8s.io/external-dns/external-dns
+      tag: v0.16.1
     provider:
       name: cloudflare
     env:
@@ -56,7 +56,7 @@ spec:
       - --cloudflare-proxied
       - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
       - --crd-source-kind=DNSEndpoint
-      - --gateway-label-filter=gateway==external
+      - --gateway-name=external
       - --zone-id-filter=$(CF_ZONE_ID)
     triggerLoopOnEvent: true
     policy: sync
