--- a/kubernetes/apps/base/kube-system/cilium/app/kustomization.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/app/kustomization.yaml
@@ -8,5 +8,7 @@ configMapGenerator:
   - name: cilium-values
     files:
       - values.yaml=./helm/values.yaml
+      # renovate: datasource=github-releases depName=kubernetes-sigs/gateway-api
+      - https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.2.1/experimental-install.yaml
 configurations:
   - ./helm/kustomizeconfig.yaml
