--- a/kubernetes/apps/base/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/app/helm/values.yaml
@@ -55,6 +55,7 @@ operator:
     enabled: true
     serviceMonitor:
       enabled: true
+  replicas: 1
   rollOutPods: true
 prometheus:
   enabled: true
