chore: pin actions to semver for minireleaseage to work

--- a/.github/workflows/nas-restart.yaml
+++ b/.github/workflows/nas-restart.yaml
@@ -16,19 +16,19 @@
           cluster: ["main"]
       steps:
         - name: Configure 1password
-          uses: 1password/load-secrets-action/configure@v2
+          uses: 1password/load-secrets-action/configure@581a835fb51b8e7ec56b71cf2ffddd7e68bb25e0 # v2.0.0
           with:
             service-account-token: ${{ secrets.ONEPASS_SA_TOKEN }}
 
         - name: Get Secrets
-          uses: 1password/load-secrets-action@v2
+          uses: 1password/load-secrets-action@581a835fb51b8e7ec56b71cf2ffddd7e68bb25e0 # v2.0.0
           with:
             export-env: true
           env:
             KUBECONFIG: op://Kubernetes/kubernetes/KUBECONFIG_BASE64
 
         - name: Checkout
-          uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+          uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
         - name: Setup Homebrew
           uses: Homebrew/actions/setup-homebrew@master
