--- a/.github/workflows/image-pull.yaml
+++ b/.github/workflows/image-pull.yaml
@@ -16,15 +16,37 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       any_changed: ${{ steps.changed-files.outputs.any_changed }}
+      available_clusters: ${{ steps.check-runners.outputs.available_clusters }}
     steps:
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Get Changed Files
         id: changed-files
         uses: tj-actions/changed-files@2f7c5bfce28377bc069a65ba478de0a74aa0ca32 # v46.0.1
         with:
           files: kubernetes/**
+
+      - name: Check Available Runners
+        id: check-runners
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          CLUSTERS=("main" "utility" "test")
+          AVAILABLE_CLUSTERS=()
+
+          for cluster in "${CLUSTERS[@]}"; do
+            RUNNER="home-ops-runner-$cluster"
+            STATUS=$(gh api /repos/${{ github.repository }}/actions/runners --jq ".runners | map(select(.name == \"$RUNNER\" and .status == \"online\")) | length")
+
+            if [[ "$STATUS" -gt 0 ]]; then
+              AVAILABLE_CLUSTERS+=("\"$cluster\"")
+            fi
+          done
+
+          JSON="[${AVAILABLE_CLUSTERS[*]}]"
+          echo "available_clusters=$JSON" >> $GITHUB_OUTPUT
+          echo "Available clusters: $JSON"
 
   extract:
     if: ${{ needs.pre-job.outputs.any_changed == 'true' }}
@@ -34,14 +56,14 @@ jobs:
     strategy:
       matrix:
         branches: ["default", "pull"]
-        cluster: ["main", "utility"]
+        cluster: ${{ fromJSON(needs.pre-job.outputs.available_clusters) }}
       fail-fast: false
     outputs:
       default: ${{ steps.images.outputs.default }}
       pull: ${{ steps.images.outputs.pull }}
     steps:
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           ref: "${{ matrix.branches == 'default' && github.event.repository.default_branch || '' }}"
 
@@ -97,7 +119,7 @@ jobs:
     needs: ["pre-job", "compare"]
     strategy:
       matrix:
-        cluster: ["main", "utility"]
+        cluster: ${{ fromJSON(needs.pre-job.outputs.available_clusters) }}
         images: ${{ fromJSON(needs.compare.outputs.images) }}
       max-parallel: 4
       fail-fast: false
