try github.token

--- a/.github/workflows/image-pull.yaml
+++ b/.github/workflows/image-pull.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Check Available Runners
         id: check-runners
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ github.token }}
         run: |
           CLUSTERS=("main" "utility" "test")
           AVAILABLE_CLUSTERS=()
